fix(resource, desktop): 还原资源路径并修复系统角色激活问题 (#476)
- 还原 @promptx/resource 中的路径解析逻辑，解决因路径变更导致的资源加载失败问题。

- 修复了由于系统角色资源路径不正确，导致无法在应用中激活或使用的严重 bug。

- 优化资源管理页面，根据新的路径逻辑过滤系统内置资源，使其对普通用户不可见，仅保留用户自定义资源的管理功能。

--- a/apps/desktop/src/i18n/locales/en.json
+++ b/apps/desktop/src/i18n/locales/en.json
@@ -76,7 +76,8 @@
       "deleteSuccess": "Deleted successfully",
       "deleteFailed": "Delete failed",
       "deleteOnlyUser": "Only user resources can be deleted (system/project cannot be deleted)",
-      "noMore": "No more items :-I"
+      "noMore": "No more items :-I",
+      "editOnlyUser": "Only user resources can be edited "
     },
     "types": {
       "role": "role",
